<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="56dp"
        android:layout_height="56dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/errorImageView"
        android:layout_width="72dp"
        android:layout_height="72dp"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@id/errorTitleTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/errorTitleTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="48dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/error_generic_title"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/errorInfoTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/errorImageView"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/errorInfoTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="48dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/error_generic_description"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/retryButton"
        app:layout_constraintTop_toBottomOf="@id/errorTitleTextView"
        app:layout_constraintVertical_chainStyle="packed"
        tools:visibility="visible" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/retryButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:minHeight="0dp"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:text="@string/retry_prompt"
        android:textSize="14sp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/errorInfoTextView"
        tools:visibility="visible" />

</androidx.constraintlayout.widget.ConstraintLayout>
